<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/logout_button_background"
        android:elevation="2dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoutButton"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/studentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_student"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/btnShowSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_schedule"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnShowMarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_marks"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnShowAssignments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_assignments"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
