<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <!-- أيقونة أو شعار -->
        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/school"
            android:layout_marginBottom="24dp"
             />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="Welcome to our school system"
           android:textSize="20dp" />

        <!-- حقل اسم المستخدم -->
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="14dp"
            android:background="@drawable/edittext_background"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/hintColor"

             android:drawablePadding="12dp"
             android:layout_marginBottom="16dp" />

        <!-- حقل كلمة المرور -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:background="@drawable/edittext_background"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/hintColor"

            android:drawablePadding="12dp"
            android:layout_marginBottom="24dp" />

        <!-- زر تسجيل الدخول -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:elevation="2dp"
            android:padding="12dp" />
    </LinearLayout>
</ScrollView>
