<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/logout_button_background"
        android:elevation="2dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logoutButton"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/registrarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome, Registrar"
                android:textSize="28sp"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/addStudentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_student"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/studentScheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_schedule"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/classScheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_schedule"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"/>


            <Button
                android:id="@+id/addteacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="Add teacher"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnOpenAddSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/black"
                android:text="@string/add_subject"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnOpenAdvertisements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/black"
                android:text="Open Advertisements"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
